tests/ui/issues/issue-53498.stderr
error[E0624]: associated function `foo` is private
  --> $DIR/issue-53498.rs:16:27
   |
LL |         fn foo() {}
   |         -------- private associated function defined here
...
LL |     test::Foo::<test::B>::foo();
   |                           ^^^ private associated function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
